--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>LibraryManagement</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>LibraryManagement</name>
-  <description>LibraryManagement</description>
+  <description>Coding test project for Onpier</description>
   <properties>
     <java.version>17</java.version>
   </properties>
@@ -37,5 +37,12 @@
       </plugin>
     </plugins>
   </build>
+
+  <repositories>
+    <repository>
+      <id>maven</id>
+      <url>https://repo.maven.apache.org/maven2/</url>
+    </repository>
+  </repositories>
 
 </project>
