--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-csv</artifactId>
+      <version>2.17.0</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
